// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu component recieves className 1`] = `
<div
  className="menu TEST_CLASS"
>
  <div
    active={false}
    onClick={[Function]}
    onMouseEnter={[Function]}
    openTabClassName={false}
  >
    TEST
  </div>
</div>
`;

exports[`Menu component renders children 1`] = `
<div
  className="menu"
>
  <div
    active={false}
    onClick={[Function]}
    onMouseEnter={[Function]}
    openTabClassName={false}
  >
    TEST
  </div>
</div>
`;
